2007-01-16  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* TemplateControl.jvm.cs: added 2.0 event names for wiring up

2007-01-08  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* PageTheme.cs: implemented
	* Page.cs: fixed InitializeTheme, added PageTheme page initialization
	* TemplateControl.cs, 
	* TemplateControl.jvm.cs: added XPath, XPathSelect overloads with
	IXmlNamespaceResolver parameter
	* XPathBinder.cs: added Eval, Select overloads with
	IXmlNamespaceResolver parameter, refactored

2007-01-08  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* TemplateControl.jvm.cs: added GetGlobalResourceObject

2007-01-07 Igor Zelmanovich <igorz@mainsoft.com>

	* Page.cs: refactoring: used RegisterHiddenField for _VIEWSTATE field.

2007-01-04 Igor Zelmanovich <igorz@mainsoft.com>

	* Control.cs: ensure 'id' attribute will be rendered if 
	ClientID was accessed but ID is generated by the Page, 
	important for custom controls developing.

2007-01-04 Igor Zelmanovich <igorz@mainsoft.com>

	* Page.cs: fixed: InitializeCulture should be called 
	before creating controls.

2007-01-03  Marek Habersack  <grendello@gmail.com>

	* Page.cs: Make sure the ValidatorOnSubmit function is defined for the
	document before attempting to use it.

2007-01-01  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* Control.cs: fixed ResolveClientUrl, wrong when control that calls
	this method and the page are in different folders

2006-12-31 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Page.cs: show the validation summary when client validation and
	linkbuttons are used. Patch by Juraj Skripsky.

2006-12-31 Igor Zelmanovich <igorz@mainsoft.com>

	* Page.cs: fixed: EventValidation is not performed for CallBack request.

2006-12-27 Igor Zelmanovich <igorz@mainsoft.com>

	* Page.cs: fixed: RegisterRequiresPostBack feature.

2006-12-21  Marek Habersack  <grendello@gmail.com>

	* ControlBuilder.cs: Add support for tag mapping in 2.0

2006-12-20  Marek Habersack  <grendello@gmail.com>
